--- a/translations/validators.nl.xlf
+++ b/translations/validators.nl.xlf
@@ -1,45 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" version="1.2">
-  <file source-language="en" target-language="nl" datatype="plaintext" original="file.ext">
-    <header>
-      <tool tool-id="symfony" tool-name="Symfony"/>
-    </header>
-    <body>
-      <trans-unit id="TG1D5NO" resname="post.blank_summary">
+<xliff xmlns="urn:oasis:names:tc:xliff:document:2.0" version="2.0" srcLang="nl" trgLang="nl">
+  <file id="validators.nl">
+    <unit id="TG1D5NO" name="post.blank_summary">
+      <notes>
+        <note priority="1">obsolete</note>
+      </notes>
+      <segment>
         <source>post.blank_summary</source>
         <target>Geef uw bericht een samenvatting.</target>
+      </segment>
+    </unit>
+    <unit id="BZOzjk." name="post.blank_content">
+      <notes>
         <note priority="1">obsolete</note>
-      </trans-unit>
-      <trans-unit id="BZOzjk." resname="post.blank_content">
+      </notes>
+      <segment>
         <source>post.blank_content</source>
         <target>Uw bericht heeft nog geen inhoud.</target>
+      </segment>
+    </unit>
+    <unit id="S6M.YWY" name="post.too_short_content">
+      <notes>
         <note priority="1">obsolete</note>
-      </trans-unit>
-      <trans-unit id="S6M.YWY" resname="post.too_short_content">
+      </notes>
+      <segment>
         <source>post.too_short_content</source>
         <target>Bericht inhoud is te kort (minimaal {{ limit }} karakters)</target>
+      </segment>
+    </unit>
+    <unit id="ARUoKOV" name="comment.blank">
+      <notes>
         <note priority="1">obsolete</note>
-      </trans-unit>
-      <trans-unit id="ARUoKOV" resname="comment.blank">
+      </notes>
+      <segment>
         <source>comment.blank</source>
         <target>Vul alstublieft een reactie in.</target>
+      </segment>
+    </unit>
+    <unit id="J.L_ppQ" name="comment.too_short">
+      <notes>
         <note priority="1">obsolete</note>
-      </trans-unit>
-      <trans-unit id="J.L_ppQ" resname="comment.too_short">
+      </notes>
+      <segment>
         <source>comment.too_short</source>
         <target>Reactie is te kort (minimaal {{ limit }} karakters)</target>
+      </segment>
+    </unit>
+    <unit id=".bkQKXb" name="comment.too_long">
+      <notes>
         <note priority="1">obsolete</note>
-      </trans-unit>
-      <trans-unit id=".bkQKXb" resname="comment.too_long">
+      </notes>
+      <segment>
         <source>comment.too_long</source>
         <target>Reactie is te lang (maximaal {{ limit }} karakters)</target>
+      </segment>
+    </unit>
+    <unit id="cTT8h4_" name="comment.is_spam">
+      <notes>
         <note priority="1">obsolete</note>
-      </trans-unit>
-      <trans-unit id="cTT8h4_" resname="comment.is_spam">
+      </notes>
+      <segment>
         <source>comment.is_spam</source>
         <target>De inhoud van deze reactie wordt als spam gemarkeerd.</target>
-        <note priority="1">obsolete</note>
-      </trans-unit>
-    </body>
+      </segment>
+    </unit>
   </file>
 </xliff>
