--- a/translations/validators.fr.xlf
+++ b/translations/validators.fr.xlf
@@ -1,45 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" version="1.2">
-  <file source-language="en" target-language="fr" datatype="plaintext" original="file.ext">
-    <header>
-      <tool tool-id="symfony" tool-name="Symfony"/>
-    </header>
-    <body>
-      <trans-unit id="TG1D5NO" resname="post.blank_summary">
+<xliff xmlns="urn:oasis:names:tc:xliff:document:2.0" version="2.0" srcLang="fr" trgLang="fr">
+  <file id="validators.fr">
+    <unit id="TG1D5NO" name="post.blank_summary">
+      <notes>
+        <note priority="1">obsolete</note>
+      </notes>
+      <segment>
         <source>post.blank_summary</source>
         <target>Veuillez donner un résumé à votre post.</target>
+      </segment>
+    </unit>
+    <unit id="BZOzjk." name="post.blank_content">
+      <notes>
         <note priority="1">obsolete</note>
-      </trans-unit>
-      <trans-unit id="BZOzjk." resname="post.blank_content">
+      </notes>
+      <segment>
         <source>post.blank_content</source>
         <target>Veuillez donner un contenu à votre post.</target>
+      </segment>
+    </unit>
+    <unit id="S6M.YWY" name="post.too_short_content">
+      <notes>
         <note priority="1">obsolete</note>
-      </trans-unit>
-      <trans-unit id="S6M.YWY" resname="post.too_short_content">
+      </notes>
+      <segment>
         <source>post.too_short_content</source>
         <target>Le contenu de votre post est trop court ({{ limit }} caractères minimum)</target>
+      </segment>
+    </unit>
+    <unit id="ARUoKOV" name="comment.blank">
+      <notes>
         <note priority="1">obsolete</note>
-      </trans-unit>
-      <trans-unit id="ARUoKOV" resname="comment.blank">
+      </notes>
+      <segment>
         <source>comment.blank</source>
         <target>Veuillez ne pas laisser votre commentaire vide.</target>
+      </segment>
+    </unit>
+    <unit id="J.L_ppQ" name="comment.too_short">
+      <notes>
         <note priority="1">obsolete</note>
-      </trans-unit>
-      <trans-unit id="J.L_ppQ" resname="comment.too_short">
+      </notes>
+      <segment>
         <source>comment.too_short</source>
         <target>Votre commentaire est trop court ({{ limit }} caractères minimum)</target>
+      </segment>
+    </unit>
+    <unit id=".bkQKXb" name="comment.too_long">
+      <notes>
         <note priority="1">obsolete</note>
-      </trans-unit>
-      <trans-unit id=".bkQKXb" resname="comment.too_long">
+      </notes>
+      <segment>
         <source>comment.too_long</source>
         <target>Votre commentaire est trop long ({{ limit }} caractères maximum)</target>
+      </segment>
+    </unit>
+    <unit id="cTT8h4_" name="comment.is_spam">
+      <notes>
         <note priority="1">obsolete</note>
-      </trans-unit>
-      <trans-unit id="cTT8h4_" resname="comment.is_spam">
+      </notes>
+      <segment>
         <source>comment.is_spam</source>
         <target>Le contenu de votre commentaire est considéré comme du spam.</target>
-        <note priority="1">obsolete</note>
-      </trans-unit>
-    </body>
+      </segment>
+    </unit>
   </file>
 </xliff>
