--- a/translations/messages.es.xlf
+++ b/translations/messages.es.xlf
@@ -1,106 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" version="1.2">
-  <file source-language="en" target-language="es" datatype="plaintext" original="file.ext">
-    <header>
-      <tool tool-id="symfony" tool-name="Symfony"/>
-    </header>
-    <body>
-      <trans-unit id="k.JymqB" resname="about.visit_bolt">
-        <source>about.visit_bolt</source>
-        <target>Visita bolt.cm</target>
-      </trans-unit>
-      <trans-unit id="1sstKF9" resname="title.edit_user">
+<xliff xmlns="urn:oasis:names:tc:xliff:document:2.0" version="2.0" srcLang="pl" trgLang="es">
+  <file id="messages.es">
+    <unit id="1sstKF9" name="title.edit_user">
+      <notes>
+        <note>templates/users/edit.twig:4</note>
+      </notes>
+      <segment>
         <source>title.edit_user</source>
         <target>Editar Usuario</target>
-      </trans-unit>
-      <trans-unit id="XNTbZW6" resname="action.visit_site">
-        <source>action.visit_site</source>
-        <target>Visitar Sitio</target>
-      </trans-unit>
-      <trans-unit id="UZFanGF" resname="about.bolt_documentation">
+      </segment>
+    </unit>
+    <unit id="k.JymqB" name="about.visit_bolt">
+      <notes>
+        <note>templates/pages/about.twig:25</note>
+      </notes>
+      <segment>
+        <source>about.visit_bolt</source>
+        <target>Visita bolt.cm</target>
+      </segment>
+    </unit>
+    <unit id="UZFanGF" name="about.bolt_documentation">
+      <notes>
+        <note>templates/pages/about.twig:28</note>
+      </notes>
+      <segment>
         <source>about.bolt_documentation</source>
         <target>Documentación del Bolt</target>
-      </trans-unit>
-      <trans-unit id="b_RPpcB" resname="general.greeting">
-        <source>general.greeting</source>
-        <target>Hola %name%</target>
-      </trans-unit>
-      <trans-unit id="bmdn3u9" resname="action.logout">
-        <source>action.logout</source>
-        <target>Cerrar Sesión</target>
-      </trans-unit>
-      <trans-unit id="KfVJho2" resname="action.create_new">
+      </segment>
+    </unit>
+    <unit id="XNTbZW6" name="action.visit_site">
+      <segment>
+        <source>action.visit_site</source>
+        <target>Visitar Sitio</target>
+      </segment>
+    </unit>
+    <unit id="KfVJho2" name="action.create_new">
+      <segment>
         <source>action.create_new</source>
         <target>Crear Nuevo</target>
-      </trans-unit>
-      <trans-unit id="zOfpTLD" resname="action.edit_profile">
+      </segment>
+    </unit>
+    <unit id="b_RPpcB" name="general.greeting">
+      <segment>
+        <source>general.greeting</source>
+        <target>Hola %name%</target>
+      </segment>
+    </unit>
+    <unit id="bmdn3u9" name="action.logout">
+      <segment>
+        <source>action.logout</source>
+        <target>Cerrar Sesión</target>
+      </segment>
+    </unit>
+    <unit id="zOfpTLD" name="action.edit_profile">
+      <segment>
         <source>action.edit_profile</source>
         <target>Editar Perfil</target>
-      </trans-unit>
-      <trans-unit id="N_0yRcH" resname="action.close_alert">
+      </segment>
+    </unit>
+    <unit id="N_0yRcH" name="action.close_alert">
+      <segment>
         <source>action.close_alert</source>
         <target>Cerrar</target>
-      </trans-unit>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    </body>
+      </segment>
+    </unit>
   </file>
 </xliff>
