--- a/translations/messages.fr.xlf
+++ b/translations/messages.fr.xlf
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<xliff xmlns="urn:oasis:names:tc:xliff:document:2.0" version="2.0" srcLang="fr" trgLang="fr">
+<xliff xmlns="urn:oasis:names:tc:xliff:document:2.0" version="2.0" srcLang="en" trgLang="fr">
   <file id="messages.fr">
+    <unit id="etGJjTo" name="action.edit_user">
+      <notes>
+        <note>templates/users/change_password.twig:26</note>
+      </notes>
+      <segment>
+        <source>action.edit_user</source>
+        <target>Modifier l'utilisateur</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
