--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -993,5 +993,23 @@
         <target>The Kitchensink</target>
       </segment>
     </unit>
+    <unit id="eq5YMQf" name="9fb3e6e">
+      <segment>
+        <source>This website is &lt;a href='%url%' target='_blank' title='Sophisticated, lightweight &amp; simple CMS'&gt;Built with Bolt&lt;/a&gt;.</source>
+        <target><![CDATA[This website is <a href='%url%' target='_blank' title='Sophisticated, lightweight & simple CMS'>Built with Bolt</a>.]]></target>
+      </segment>
+    </unit>
+    <unit id="2CfJ3WY" name="general.phrase.search-results-for">
+      <segment>
+        <source>general.phrase.search-results-for</source>
+        <target>Search results for '%search%'.</target>
+      </segment>
+    </unit>
+    <unit id="V0VhH5g" name="general.phrase.no-search-results-for">
+      <segment>
+        <source>general.phrase.no-search-results-for</source>
+        <target>No search results found for '%search%'.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
