--- a/translations/messages.hu.xlf
+++ b/translations/messages.hu.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" version="1.2">
-  <file source-language="hu" target-language="hu" datatype="plaintext" original="file.ext">
+  <file source-language="en" target-language="hu" datatype="plaintext" original="file.ext">
     <header>
       <tool tool-id="symfony" tool-name="Symfony"/>
     </header>
@@ -722,6 +722,10 @@
       <trans-unit id="I2ykiIZ" resname="caption.folders">
         <source>caption.folders</source>
         <target>Mappák</target>
+      </trans-unit>
+      <trans-unit id="cu3W5DR" resname="image.upload">
+        <source>image.upload</source>
+        <target>Feltöltés</target>
       </trans-unit>
     </body>
   </file>
