--- a/translations/validators.hu.xlf
+++ b/translations/validators.hu.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" version="1.2">
-  <file source-language="hu" target-language="hu" datatype="plaintext" original="file.ext">
+  <file source-language="en" target-language="hu" datatype="plaintext" original="file.ext">
     <header>
       <tool tool-id="symfony" tool-name="Symfony"/>
     </header>
